# Cannonball-Vibe

./: .gitattributes  .gitignore  AGENTS.md  Cannonball.csproj  Cannonball.sln  Directory.Build.props  README.md  export_presets.cfg  gdd.md  packages.linux-x64.lock.json  packages.lock.json  packages.win-x64.lock.json  project.godot
.dots/: Cannonball-Vibe-define-directional-230ab2ae.md  Cannonball-Vibe-publish-primary-immutable-d1db777d.md  config
automation/playgodot/: pyproject.toml
automation/playgodot/src/cannonball_playgodot/: __init__.py  cli.py  client.py  launcher.py
automation/playgodot/tests/: test_camera_handling.py  test_cli.py  test_client.py  test_driving_input.py  test_live.py
automation/playgodot/tests/golden/v1/: session.jsonl
docs/: DELIVERY_LEDGER.json  M0_VALIDATION.md  RELEASE.md  (+14 more)
tools/map_pipeline/: README.md  pyproject.toml
tools/map_pipeline/src/Cannonball/Content/: ChunkManifestData.py  ChunkRouteSample.py  ExitData.py  JunctionConnectorData.py  LaneSectionData.py  MilepointAnchorData.py  RoadsideMarkerData.py  RouteChunkBuffer.py  RouteEdgeData.py  RouteGraphBuffer.py  RouteIdentityData.py  RouteLaneData.py  RouteNodeData.py  RouteSample.py  RouteShoulderData.py  SemanticProvenanceData.py  SimplifiedMapGeometryData.py  SimplifiedMapPoint.py  SourceCoordinate.py  SourceProvenanceData.py  SpatialReferenceData.py
tools/map_pipeline/src/cannonball_map/: __init__.py  acquisition.py  catalog.py  cli.py  elevation.py  flatbuffer_writer.py  lockfile.py  manifest.py  models.py  pipeline.py  semantics.py  sharding.py  telemetry.py
tools/map_pipeline/tests/: test_acquisition.py  test_elevation.py  test_lockfile.py  test_manifest.py  test_pipeline.py  test_semantics.py  test_sharding.py  test_telemetry.py  test_validation_corpus.py
(+273 files in other folders)
