[project]
name = "cannonball-playgodot"
version = "0.1.0"
description = "Bounded semantic automation client for Cannonball's Godot debug build"
requires-python = ">=3.13"
dependencies = []

[project.scripts]
playgodot = "cannonball_playgodot.cli:main"

[dependency-groups]
dev = [
  "pillow>=11.1.0",
  "pytest>=8.3.4",
  "pytest-asyncio>=0.25.3",
  "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cannonball_playgodot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
asyncio_mode = "auto"

[tool.ruff]
line-length = 100
target-version = "py313"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
