[project]
name = "cannonball-map"
version = "0.1.0"
description = "Deterministic, public-domain-only route data pipeline for Cannonball-Vibe"
requires-python = ">=3.13"
dependencies = [
  "duckdb>=1.4.0",
  "flatbuffers>=25.2.10",
  "geopandas>=1.0.1",
  "networkx>=3.4.2",
  "pyogrio>=0.10.0",
  "pyproj>=3.7.0",
  "rasterio>=1.4.3",
  "shapely>=2.0.7",
  "typer>=0.15.1",
]

[project.scripts]
cannonball-map = "cannonball_map.cli:app"

[dependency-groups]
dev = [
  "pytest>=8.3.4",
  "ruff>=0.9.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/cannonball_map", "src/Cannonball"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py313"
exclude = ["src/Cannonball"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
ignore = ["B008"]
